# LearnOpengl

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main1.cpp  main2-2.cpp  main2-3-homework1.cpp  main2-3.cpp  main2.cpp
Shaders/: shader-simple-fs.glsl  shader-simple-vs.glsl
include/: shader.h
include/glad/: glad.h
src/: glad.c
